--- a/templates/workshop/new_lecture_page.html
+++ b/templates/workshop/new_lecture_page.html
@@ -22,7 +22,7 @@
                 <label for="title"><h5>Введите название лекции</h5></label>
             </div>
             <div class="form-row mt-1 mb-1 ">
-                <input type="text" class='form-control' id="text" name="title" placeholder="Не более 160 символов">
+                <input type="text" class='form-control' id="text" name="title" placeholder="Не более 60 символов" maxlength='60' >
             </div>
             <div class="form-row mt-1 mb-1">
                     <input type="submit" value="Создать" class="btn btn-block btn-outline-dark">
