--- a/project/static/style.css
+++ b/project/static/style.css
@@ -196,10 +196,15 @@ iframe {
   background-color: yellow;
 }
 
+.draggable_lecture:hover {
+  cursor:grab;
+  background-color: blanchedalmond;
+  box-shadow: 0 0 10px 2px;
+}
 
 .draggable_lecture.dragging {
   background-color: blanchedalmond;
- 
+  box-shadow: 0 0 10px 2px;
 }
 
 .draggable_section.draggingSection {
@@ -622,6 +627,33 @@ iframe {
   padding: 1rem;
   box-shadow: 0 0 10px 2px;
 }
+/*========================================*/
+.popUpLecture {
+  display: none;
+}
+.popUpLecture.openModal {
+  display: block;
+    padding: 0.1rem;
+    position: absolute;
+    left: 2rem;
+    top: -1rem;
+    height: fit-content;
+    width: fit-content;
+    border: solid 1px black;
+    background-color: white;
+    z-index: 1;
+    font-size: small;
+    box-shadow: 0 0 10px 2px;
+  }
+
+/*=====================================*/
+.editSectionTitle {
+  display: none;
+}
+.editSectionTitle.openModal {
+  display: block;
+}
+
 
 /*================================*/
 .textFileModule {
@@ -672,7 +704,7 @@ iframe {
   /*background-color: #aaaaaa;*/
   /*border: solid 1px blue;*/
   border-radius: 5px;
-  height: 40rem;
+  height: fit-content;
   width: 20rem;
   box-shadow: 0 0 10px 2px;
 }
