--- a/templates/workshop/edit_lecture_page.html
+++ b/templates/workshop/edit_lecture_page.html
@@ -10,30 +10,79 @@
                 <li class="breadcrumb-item"><a href="{% url 'studio' %}">Творческая студия</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'edit_subject' subject.id %}">Редактирование курса</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'sections' subject.id %}">Разделы</a></li>
-
                 <li class="breadcrumb-item active" aria-current="page">Лекция</li>
             </ol>
         </nav>
     </div>
 
         <div class='editLectureBox'>
-            <div class="row m-auto">
-                <div class="col-11"><h5>Лекция: {{lecture.title}}</h5></div>
+            <div class="row m-auto" >
+                <div class="col-11">
+                    <strong>
+                        Лекция: {{lecture.title}} &nbsp
+                        </strong>
+                                <div class="popUpLecture">
+                                    Изменить название лекции.
+                                </div>
+                            <a href="#" style="text-decoration: none" >
+                                <h4 style="display: inline">
+                                <i class="fa-solid fa-pen-to-square"></i>
+                                </h4>
+                            </a>
+                    </div>
+
+<!-- ============================Edit Section Title Module============================== -->
+<div class="editSectionTitle">
+<div class="hide">
+    <div class="createSectionBox">
+        <form action="{% url 'edit_lecture_title' lecture.id %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+
+            <div class="form-row mt-1 mb-1">
+                <label for="file">
+                    <strong>
+                        Измените название лекции (не более 60 символов): 
+                    </strong>
+                </label>
+            </div>
+            <div class="form-row mt-1 mb-1">
+                <input type="text" class="form-control" id="title" name="title" required
+                    placeholder="{{lecture.title}}" maxlength="60">
+
+            </div>
+
+            <div class="form-row mt-1 mb-1">
+                <input type="submit" value="Изменить" class='btn btn-block btn-outline-dark'>
+            </div>
+        </form>
+
+            <div class="form-row">
+                <input type="button" value="Закрыть" class='btn btn-block btn-outline-dark btnClose'>
+            </div>
+  
+
+    </div>
+</div>
+</div>
+<!-- ============================End of Edit Section Title Module============================== -->
+
+
+               
                 <div class="col-1">
-                <a href="{%url 'sections' subject.id%}" style="text-decoration: none; color: black">
-                <h1 class="closeCross">&times;</h1>
+                <a href="{% url 'sections' subject.id%}" style="text-decoration: none; color: black">
+                  <h1 class="closeCross">&times;</h1>
                 </a>
                 </div>
-               
             </div>
-            <hr style="border-top: 1px solid grey">
          
             <div class="row ml-2 mb-2">
-                <h5>Выберите тип наполнения лекции: <i class="fa-solid fa-folder-open"></i> </h5>
-            </div>
-            <hr style="border-top: 1px solid grey">
+                <h5 style="display: inline">Выберите тип наполнения лекции:
+                <!-- <i class="fa-solid fa-folder-open"></i> -->
+                </h5>
 
+            </div>
                 {% if lecture.video_file%}
+                <div class="box">
                 <div class="row ml-2 mb-2">
                 Название видеофайла:  {{lecture.video_file}}
                 </div>
@@ -51,14 +100,16 @@
                         <div class="popUp">
                             Удалить содержимое.
                         </div>
-                        <a href="#">
-                            <i class="fa-solid fa-trash"></i>
+                        <a href="{% url 'delete_lecture_videofile' lecture.id%}">
+                          <h4><i class="fa-solid fa-trash"></i></h4>
                         </a>
                     </div>
                 </div>
+                </div>
                 {% endif %}
-
+  
                 {%  if lecture.quizquestion_set.filter.exists %}
+                <div class="box">
                 <div class="row ml-2 mb-2">
                     <div class="col-4">
                         <a href="{% url 'quiz_creation' lecture.id %}">
@@ -70,16 +121,18 @@
                             Удалить содержимое.
                         </div>
                         <a href="{% url 'delete_quiz' lecture.id%}">
-                            <i class="fa-solid fa-trash"></i>
+                            <h4><i class="fa-solid fa-trash"></i></h4>
                         </a>
                     </div>
-                   
+                </div>
                 </div>
                 {% endif %}
 
 
+
                 {% if lecture.additionalmaterialfile_set.filter.exists %}
                     {% for item in lecture.additionalmaterialfile_set.all%}
+                    <div class="box">
                     <div class="row ml-2 mb-2">
                         <div class="col-4">
                     Текстовый файл/ы:
@@ -92,16 +145,17 @@
                                 Удалить содержимое.
                             </div>
                             <a href="{% url 'delete_text_file' lecture.id%}">
-                                <i class="fa-solid fa-trash"></i>
+                                <h4><i class="fa-solid fa-trash"></i></h4>
                             </a>
                         </div>
+                    </div>
                     </div>
                     {% endfor %}
                 {% endif %}
 
-
                 {% if lecture.additionalmateriallink_set.filter.exists %}
                 {% for item in lecture.additionalmateriallink_set.all%}
+                <div class="box">
                 <div class="row ml-2 mb-2">
                     <div class="col-4">
                         Внешняя ссылка: 
@@ -115,11 +169,11 @@
                         </div>
                         <a href="{% url 'delete_url_link' lecture.id%}">
                          
-                            <i class="fa-solid fa-trash"></i>
+                            <h4><i class="fa-solid fa-trash"></i></h4>
                         </a>
                       
                     </div>
-                   
+                </div>
                 </div>
                 {% endfor %}
                 {% endif %}
@@ -158,7 +212,7 @@
       
         
            
-            <form action="{% url 'lecture_update' subject.id section.id lecture.id %}" method="POST"
+            <form action="{% url 'lecture_update_videofile' subject.id section.id lecture.id %}" method="POST"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                     
@@ -362,6 +416,23 @@
             })
         }*/
 
+        const popUpLecture = document.querySelector('.popUpLecture');
+        const faPenToSquare = document.querySelector('.fa-pen-to-square');
+        const editSectionTitle = document.querySelector('.editSectionTitle');
+        const btnClose = document.querySelector('.btnClose');
+
+        faPenToSquare.addEventListener('mouseover', () => {
+            popUpLecture.classList.add('openModal')
+        })
+        faPenToSquare.addEventListener('mouseleave', () => {
+            popUpLecture.classList.remove('openModal')
+        })
+        faPenToSquare.addEventListener('click', () => {
+                editSectionTitle.classList.add('openModal')
+            })
+        btnClose.addEventListener('click', () => {
+                editSectionTitle.classList.remove('openModal')
+            })
 
 
 </script>
