--- a/static/style.css
+++ b/static/style.css
@@ -197,7 +197,7 @@ iframe {
 }
 
 .draggable_lecture:hover {
-  cursor:grab;
+  cursor: grab;
   background-color: blanchedalmond;
   box-shadow: 0 0 10px 2px;
 }
@@ -241,7 +241,8 @@ iframe {
   /*position: absolute;
     /*border: 1px solid;*/
   /*border-color: #aaaaaa;*/
-  padding: 5rem;;
+  padding: 5rem;
+  ;
   border-radius: 1rem;
   top: 30vh;
   left: 35rem;
@@ -327,6 +328,7 @@ iframe {
 .popUpEditLecture {
   display: none
 }
+
 .popUpEditLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -345,6 +347,7 @@ iframe {
 .popUpAddLecture {
   display: none
 }
+
 .popUpAddLecture.openModal {
   display: block;
   padding: 0.1rem;
@@ -359,10 +362,11 @@ iframe {
   font-size: small;
   box-shadow: 0 0 10px 2px;
 }
- 
+
 .popUpCreateSection {
   display: none;
 }
+
 .popUpCreateSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -381,6 +385,7 @@ iframe {
 .popUpEditSection {
   display: none;
 }
+
 .popUpEditSection.openModal {
   display: block;
   padding: 0.1rem;
@@ -424,6 +429,7 @@ iframe {
 .editSection {
   display: none;
 }
+
 .editSection.openModal {
   display: block;
 }
@@ -550,10 +556,12 @@ iframe {
   z-index: 1;
   opacity: 1;
 }
+
 /*========================================*/
 .fileLibraryModule {
   display: none;
 }
+
 .fileLibraryModule.openModal {
   display: block;
   background-color: whitesmoke;
@@ -627,29 +635,32 @@ iframe {
   padding: 1rem;
   box-shadow: 0 0 10px 2px;
 }
+
 /*========================================*/
 .popUpLecture {
   display: none;
 }
+
 .popUpLecture.openModal {
   display: block;
-    padding: 0.1rem;
-    position: absolute;
-    left: 2rem;
-    top: -1rem;
-    height: fit-content;
-    width: fit-content;
-    border: solid 1px black;
-    background-color: white;
-    z-index: 1;
-    font-size: small;
-    box-shadow: 0 0 10px 2px;
-  }
+  padding: 0.1rem;
+  position: absolute;
+  left: 2rem;
+  top: -1rem;
+  height: fit-content;
+  width: fit-content;
+  border: solid 1px black;
+  background-color: white;
+  z-index: 1;
+  font-size: small;
+  box-shadow: 0 0 10px 2px;
+}
 
 /*=====================================*/
 .editSectionTitle {
   display: none;
 }
+
 .editSectionTitle.openModal {
   display: block;
 }
@@ -714,8 +725,9 @@ iframe {
   border-bottom: 1px solid grey;
   height: 5rem;
 }
+
 .subject_box_bar:hover {
-  background-color:whitesmoke;
+  background-color: whitesmoke;
   border-bottom: 1px solid grey;
   height: 5rem;
   box-shadow: 0 0 10px 2px;
