--- a/templates/mycourses/subject_purchased.html
+++ b/templates/mycourses/subject_purchased.html
@@ -110,28 +110,37 @@
 
             {% for lecture in lectures %}
                 {% if lecture.section == section %}
-                    <div id="section{{section.id}}" class='collapse'>
-                        <li class="list-group-item" id='lecture'>
-                        <div class="row">
-                            <div class="col-9">
-                       
-                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank" id='a_id'>{{lecture.title}} {{lecture.length_1}} </a>
-                            </div>
+                <div id="section{{section.id}}" class='collapse'>
+                    <li class="list-group-item" id='lecture'>
+                        <h5>{{lecture.enumerator}}.&nbsp; {{lecture.title}}</h5>
 
-                            <div class="col-3">
-                                <div class="row">
-                            {% for item in lecture.additionalmateriallink_set.all %}
-                            <a href="{{item.url_link }}" target="_blank">Ссылка на код</a>
-                            {% endfor %}
-                                    </div>
-                                <div class="row">
-                            {% for item in lecture.additionalmaterialfile_set.all %}
-                            <a href="{{item.aditional_file }}">Загрузите файл</a>
-                            {% endfor %}
-                                    </div>
-                            </div>
-                        </li>
-                    </div>
+                        {% if lecture.video_file%}
+                        <i class="fa-sharp fa-solid fa-circle-play ml-4"></i>&nbsp;&nbsp;
+                            <a href="{% url 'video' subject.id lecture.id %}" target="_blank"> Видеофайл. Время: {{lecture.length_1}} </a><br>
+                        {% endif %}
+
+                        {% if lecture.quizquestion_set.filter.exists %}
+                        <i class="fa-solid fa-list-ul ml-4"></i>&nbsp;&nbsp;
+                        <a href="{% url 'open_show_quiz_page' lecture.id%}">Пройдите тест</a> <br>
+                        {% endif %}
+                        
+                        {% for item in lecture.additionalmaterialfile_set.all%}
+                        {% if item %}
+                    <i class="fa-regular fa-file ml-4"></i>&nbsp;&nbsp;
+                    <a class="nav-link" href="{{ item.additional_file.url }}" download>Текстовый документ</a>
+                        {% endif %}
+                        {% endfor %}
+
+
+
+                        {% for item in lecture.additionalmateriallink_set.all%}
+                        {% if item %}
+                    <i class="fa-solid fa-link ml-4"></i>&nbsp;&nbsp;
+                    <a href="{{item.url_link }}" target="_blank">Внешняя ссылка</a>
+                        {% endif %}
+                        {% endfor %}
+                    </li>
+                </div>
                 {% endif %}
             {% endfor%}
     {% endfor %}
