--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -161,15 +161,20 @@
     {% for lecture in lectures %}
         {% if lecture.section == section %}
             <div id="section{{section.id}}" class='collapse'>
-            {% if lecture.free == False %}
                 <li class="list-group-item">
                     <h5>{{lecture.enumerator}}.&nbsp; {{lecture.title}}</h5>
 
+                    {% if lecture.free == False %}
                         {% if lecture.video_file%}
                         <i class="fa-sharp fa-solid fa-circle-play ml-4"></i>&nbsp;
                             Видеофайл. Время: {{lecture.length_1}} <br>
                         {% endif %}
-                                  
+                    {% else %}
+                        {% if lecture.video_file%}
+                        <a href="{% url 'video' subject.id lecture.id %}" target="_blank">Видеофайл. {{lecture.length_1}} </a> <br>
+                        {% endif %}
+                    {% endif %}
+                           
                             {% if lecture.quizquestion_set.filter.exists %}
                             <i class="fa-solid fa-list-ul ml-4"></i>&nbsp;&nbsp;
                             Tест <br>
@@ -190,36 +195,6 @@
                                 {% endif %}
                                 {% endfor %}
                 </li>
-         
-              
-            {% else %}
-                    <li class="list-group-item">
-                    <h5 style="display: inline ">{{lecture.enumerator}}.&nbsp;</h5>
-                    <i class="fa-sharp fa-solid fa-circle-play"></i>&nbsp;&nbsp;
-                    <a href="{% url 'video' subject.id lecture.id %}" target="_blank">{{lecture.title}} {{lecture.length_1}} </a> <br>
-
-                    {% if lecture.quizquestion_set.filter.exists %}
-                    <i class="fa-solid fa-list-ul ml-4"></i>&nbsp;&nbsp;
-                    Tест <br>
-                    {% endif %}
-
-                    {% for item in lecture.additionalmaterialfile_set.all%}
-                    {% if item %}
-                    <i class="fa-regular fa-file ml-4"></i>&nbsp;&nbsp;&nbsp;Текстовый документ <br>
-                    <!-- <a class="nav-link" href="{{ item.additional_file.url }}" download>Ссылка на файл</a> -->
-                    {% endif %}
-                    {% endfor %}
-
-
-                    {% for item in lecture.additionalmateriallink_set.all%}
-                    {% if item %}
-                    <i class="fa-solid fa-link ml-4"></i>&nbsp;&nbsp;Внешняя ссылка
-                    <!-- <a href="{{item.url_link }}" target="_blank">{{item.url_link}}</a> -->
-                    {% endif %}
-                    {% endfor %}
-                    </li>
-
-            {% endif %}
             </div>
         {% endif %}
     {% endfor%}               
